<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".QuestionActivity">


    <TextView
        android:id="@+id/counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:paddingTop="30dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="30sp" />


    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:padding="5dp"
        android:stretchColumns="0,1,2">


        <TableRow
            android:layout_weight="1.0"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:background="@color/purple_500"
                android:text="@string/question"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </TableRow>

        <TableRow android:layout_weight="1.0">

            <Button
                android:id="@+id/answer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/insert_answer"
                android:textSize="15sp" />

            <Button
                android:id="@+id/answer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_margin="10sp"
                android:text="@string/insert_answer"
                android:textSize="15sp" />
        </TableRow>

        <TableRow android:layout_weight="1.0">

            <Button
                android:id="@+id/answer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/insert_answer"
                android:textSize="15sp" />

            <Button
                android:id="@+id/answer4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_margin="10sp"
                android:text="@string/insert_answer"
                android:textSize="15sp" />
        </TableRow>


    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/purple_500"
        android:text="@string/copyright"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/cardview_light_background"
        />


</RelativeLayout>